Fix text contrast, add link hover effects, change fonts

--- a/resources/scss/blocks/call-to-action.scss
+++ b/resources/scss/blocks/call-to-action.scss
@@ -19,6 +19,15 @@
         border-radius: 3px;
         cursor: pointer;
 
+        box-shadow: inset 0 0 0 0 #FFFFFF;
+        transition: color .2s ease-in-out, box-shadow .2s ease-in-out;
+
+        &:hover, &:focus {
+            background: linear-gradient(97.13deg, #E9E9E9 0%, #515151 100%);
+            box-shadow: inset 250px 0 0 0 #E9E9E9, inset 250px 0 0 0 #515151;
+            color: $grey-10;
+        }
+
         p {
             white-space: nowrap;
             margin-right: 12px;
