--- a/resources/scss/blocks/hero.scss
+++ b/resources/scss/blocks/hero.scss
@@ -11,6 +11,10 @@
         margin: 0 auto 20px auto;
     }
 
+    figcaption {
+        text-align: center;
+    }
+
     h1 {
         letter-spacing: 0;
         word-spacing: 0;
