--- a/resources/scss/utils/variables.scss
+++ b/resources/scss/utils/variables.scss
@@ -6,7 +6,7 @@ $grey-6: #242424;
 $grey-2: #9A9A9A;
 
 $primary-font: 'Roboto', sans-serif;
-$secondary-font: 'Roboto Slab', serif;
+$secondary-font: 'Roboto', sans-serif;
 
 $z-index: (
     skip-nav: 20,
